# generative-cli

./: pyproject.toml
cli/: cli.py
installer/: fedora-install.sh  linux-install.sh  macos-installer.sh  ubuntu-install.sh  windows-install.ps1
installer/nsis/: installer.nsi  windows-install.ps1
installer/wix/: claude.wxs  installer.wxs  perplexity.wxs
