[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Nick Arini <nick@generative.vision>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "cli" }
]

[tool.poetry.scripts]
generative = "cli.cli:app"